plugins {
    id 'java'
    id 'maven-publish'
}

group = 'ospx'
version = '1.3'
ext {
    mindustryVersion = "v146"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
    maven { url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
    maven { url 'https://www.jitpack.io' }
}

publishing {
    repositories {
        maven {
            name = "xcoreRepository"
            url = "https://n1.x-core.fun/maven/releases"
            credentials(PasswordCredentials)
            authentication {
                basic(BasicAuthentication)
            }
        }
    }
    publications {
        maven(MavenPublication) {
            groupId = "com.ospx"
            artifactId = "flubundle"
            version = project.version
            from components.java
        }
    }
}

dependencies {
    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"

    implementation "net.xyzsd.fluent:fluent-base:0.72"
    implementation "net.xyzsd.fluent:fluent-functions-cldr:0.72"
    implementation "net.xyzsd.fluent:fluent-functions-icu:0.72"

    testImplementation platform('org.junit:junit-bom:6.0.2')
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation "com.github.Anuken.Arc:arc-core:$mindustryVersion"
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}